seperated the window from the rendering system, and entities are now being rendered seperately

--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="arbrook\rendering\data\shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arbrook\rendering\data\window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arbrook\core\ecs\entity.hpp">
@@ -198,6 +201,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\components\shaperenderer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
