--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
     <ClCompile Include="arbrook\rendering\data\shader.cpp" />
+    <ClCompile Include="arbrook\rendering\data\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
     <ClCompile Include="arbrook\core\scheduler\scheduler.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="arbrook\rendering\components\shaperenderer.hpp" />
     <ClInclude Include="arbrook\rendering\data\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\window.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\sandbox\modules\testmodule.hpp" />
     <ClInclude Include="arbrook\rendering\modules\rendermodule.hpp" />
