--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -146,10 +146,10 @@
     <ClCompile Include="arbrook\core\engine\services\service.cpp" />
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
-    <ClCompile Include="arbrook\rendering\data\buffer.cpp" />
-    <ClCompile Include="arbrook\rendering\data\shader.cpp" />
-    <ClCompile Include="arbrook\rendering\data\texture.cpp" />
-    <ClCompile Include="arbrook\rendering\data\vertexarray.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\buffer.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\shader.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\texture.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp" />
     <ClCompile Include="arbrook\rendering\data\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
@@ -186,14 +186,16 @@
     <ClInclude Include="arbrook\core\math\math.hpp" />
     <ClInclude Include="arbrook\core\modules\module.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\buffer.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\config.hpp" />
     <ClInclude Include="arbrook\rendering\data\definitions.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\renderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\shader.hpp" />
-    <ClInclude Include="arbrook\rendering\data\texture.hpp" />
-    <ClInclude Include="arbrook\rendering\data\vertexarray.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp" />
     <ClInclude Include="arbrook\rendering\data\window.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
@@ -224,8 +226,7 @@
     <None Include="arbrook\core\modules\module.inl" />
     <None Include="arbrook\core\scheduler\scheduler.inl" />
     <None Include="arbrook\core\systems\system.inl" />
-    <None Include="arbrook\rendering\data\buffer.inl" />
-    <None Include="arbrook\rendering\data\shader.inl" />
+    <None Include="arbrook\rendering\data\OpenGL\buffer.inl" />
     <None Include="external_include\rsl\src\rythe\concepts" />
     <None Include="external_include\rsl\src\rythe\delegate" />
     <None Include="external_include\rsl\src\rythe\hash" />
