--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -57,19 +57,19 @@
     <ClCompile Include="arbrook\rendering\systems\rendersystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\shader.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="arbrook\rendering\data\window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\buffer.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\buffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\vertexarray.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\texture.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -197,10 +197,10 @@
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\buffer.hpp">
+    <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\shader.hpp">
+    <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp">
@@ -209,16 +209,16 @@
     <ClInclude Include="arbrook\rendering\data\window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\vertexarray.hpp">
+    <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\texture.hpp">
+    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\rendering.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\renderinterface.hpp">
+    <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp">
@@ -228,6 +228,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\definitions.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -266,10 +272,7 @@
       <Filter>Header Files</Filter>
     </None>
     <None Include="resources\shaders\default.shader" />
-    <None Include="arbrook\rendering\data\buffer.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="arbrook\rendering\data\shader.inl">
+    <None Include="arbrook\rendering\data\OpenGL\buffer.inl">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
