--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -147,9 +147,9 @@
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\buffer.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\shader.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\texture.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\shadercache.cpp" />
     <ClCompile Include="arbrook\rendering\data\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
@@ -186,16 +186,19 @@
     <ClInclude Include="arbrook\core\math\math.hpp" />
     <ClInclude Include="arbrook\core\modules\module.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\ishadercache.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\ivertexarray.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\shadersource.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\config.hpp" />
     <ClInclude Include="arbrook\rendering\data\definitions.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\shader.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\shadercache.hpp" />
     <ClInclude Include="arbrook\rendering\data\window.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
