--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -66,10 +66,10 @@
     <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\OpenGL\texture.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\shadercache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\OpenGL\shadercache.cpp">
+    <ClCompile Include="arbrook\rendering\data\OpenGL\texturecache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -209,9 +209,6 @@
     <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="arbrook\rendering\rendering.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -230,7 +227,7 @@
     <ClInclude Include="arbrook\rendering\data\interface\shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp">
+    <ClInclude Include="arbrook\rendering\data\interface\texture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\OpenGL\shadercache.hpp">
@@ -243,6 +240,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\interface\shadersource.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\interface\itexturecache.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\OpenGL\texturecache.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
