--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -102,7 +102,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SFML_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC;STB_IMAGE_IMPLEMENTATION</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -123,7 +123,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC;STB_IMAGE_IMPLEMENTATION</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);GLEW_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -146,10 +146,11 @@
     <ClCompile Include="arbrook\core\engine\services\service.cpp" />
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
+    <ClCompile Include="arbrook\rendering\data\interface\irenderinterface.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\buffer.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\texturecache.cpp" />
+    <ClCompile Include="arbrook\rendering\data\texturecache.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\shadercache.cpp" />
+    <ClCompile Include="arbrook\rendering\data\shadercache.cpp" />
     <ClCompile Include="arbrook\rendering\data\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
@@ -186,20 +187,21 @@
     <ClInclude Include="arbrook\core\math\math.hpp" />
     <ClInclude Include="arbrook\core\modules\module.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\ishadercache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\texture.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\itexturecache.hpp" />
+    <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
+    <ClInclude Include="arbrook\rendering\data\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\ivertexarray.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\shadersource.hpp" />
+    <ClInclude Include="arbrook\rendering\data\shadersource.hpp" />
+    <ClInclude Include="arbrook\rendering\data\texturehandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\config.hpp" />
     <ClInclude Include="arbrook\rendering\data\definitions.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\shader.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\texturecache.hpp" />
+    <ClInclude Include="arbrook\rendering\data\texturecache.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\shadercache.hpp" />
+    <ClInclude Include="arbrook\rendering\data\shadercache.hpp" />
     <ClInclude Include="arbrook\rendering\data\window.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
