--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -66,10 +66,13 @@
     <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\OpenGL\shadercache.cpp">
+    <ClCompile Include="arbrook\rendering\data\shadercache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="arbrook\rendering\data\OpenGL\texturecache.cpp">
+    <ClCompile Include="arbrook\rendering\data\texturecache.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="arbrook\rendering\data\interface\irenderinterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -224,28 +227,31 @@
     <ClInclude Include="arbrook\rendering\data\definitions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\shader.hpp">
+    <ClInclude Include="arbrook\rendering\data\shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\texture.hpp">
+    <ClInclude Include="arbrook\rendering\data\texture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\OpenGL\shadercache.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\ishadercache.hpp">
+    <ClInclude Include="arbrook\rendering\data\shadercache.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\interface\ivertexarray.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\shadersource.hpp">
+    <ClInclude Include="arbrook\rendering\data\shadersource.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\interface\itexturecache.hpp">
+    <ClInclude Include="arbrook\rendering\data\texturecache.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\OpenGL\texturecache.hpp">
+    <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\texturehandle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
