--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="arbrook\rendering\data\texturecache.cpp" />
     <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp" />
     <ClCompile Include="arbrook\rendering\data\shadercache.cpp" />
-    <ClCompile Include="arbrook\rendering\data\window.cpp" />
+    <ClCompile Include="arbrook\rendering\data\OpenGL\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
     <ClCompile Include="arbrook\core\scheduler\scheduler.cpp" />
@@ -187,6 +187,7 @@
     <ClInclude Include="arbrook\core\modules\module.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
     <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\iwindow.hpp" />
     <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\ivertexarray.hpp" />
@@ -201,7 +202,7 @@
     <ClInclude Include="arbrook\rendering\data\texturecache.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadercache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\window.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\window.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
     <ClInclude Include="arbrook\sandbox\modules\testmodule.hpp" />
