--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -146,11 +146,8 @@
     <ClCompile Include="arbrook\core\engine\services\service.cpp" />
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\buffer.cpp" />
     <ClCompile Include="arbrook\rendering\data\texturecache.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\vertexarray.cpp" />
     <ClCompile Include="arbrook\rendering\data\shadercache.cpp" />
-    <ClCompile Include="arbrook\rendering\data\OpenGL\window.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
     <ClCompile Include="arbrook\rendering\modules\rendermodule.cpp" />
     <ClCompile Include="arbrook\core\scheduler\scheduler.cpp" />
@@ -186,9 +183,10 @@
     <ClInclude Include="arbrook\core\math\math.hpp" />
     <ClInclude Include="arbrook\core\modules\module.hpp" />
     <ClInclude Include="arbrook\rendering\components\spriterenderer.hpp" />
+    <ClInclude Include="arbrook\rendering\data\bufferconcepts.hpp" />
     <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp" />
-    <ClInclude Include="arbrook\rendering\data\DirectX\window.hpp" />
-    <ClInclude Include="arbrook\rendering\data\interface\iwindow.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\ibuffer.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp" />
     <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\ivertexarray.hpp" />
@@ -197,13 +195,14 @@
     <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\config.hpp" />
     <ClInclude Include="arbrook\rendering\data\definitions.hpp" />
-    <ClInclude Include="arbrook\rendering\data\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\renderinterface.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\irenderinterface.hpp" />
     <ClInclude Include="arbrook\rendering\data\texturecache.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\vertexarray.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadercache.hpp" />
-    <ClInclude Include="arbrook\rendering\data\OpenGL\window.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\window.hpp" />
+    <ClInclude Include="arbrook\rendering\data\textureparameters.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
     <ClInclude Include="arbrook\sandbox\modules\testmodule.hpp" />
@@ -233,7 +232,6 @@
     <None Include="arbrook\core\modules\module.inl" />
     <None Include="arbrook\core\scheduler\scheduler.inl" />
     <None Include="arbrook\core\systems\system.inl" />
-    <None Include="arbrook\rendering\data\OpenGL\buffer.inl" />
     <None Include="external_include\rsl\src\rythe\concepts" />
     <None Include="external_include\rsl\src\rythe\delegate" />
     <None Include="external_include\rsl\src\rythe\hash" />
