--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -298,6 +298,7 @@
     <None Include="arbrook\core\ecs\filter.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="resources\shaders\default.shader" />
+    <None Include="resources\shaders\glsl\default.shader" />
+    <None Include="resources\shaders\hlsl\default.shader" />
   </ItemGroup>
 </Project>
