--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -263,6 +263,9 @@
     <ClInclude Include="arbrook\rendering\data\DirectX\vertexarray.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\OpenGL\textureparameters.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="arbrook\core\engine\services\serviceregistry.inl">
