--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -263,9 +263,6 @@
     <ClInclude Include="arbrook\rendering\data\DirectX\vertexarray.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\OpenGL\textureparameters.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="arbrook\rendering\data\DirectX\textureparameters.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -273,6 +270,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\DirectX\window.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\interface\enumtypes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\OpenGL\enumtypes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\DirectX\enumtypes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
